fixed homepage side nav x-overflow

--- a/css/nav-menu.css
+++ b/css/nav-menu.css
@@ -102,7 +102,7 @@ main.body-open {
   background-color: #303030;
   z-index: 1;
   position: fixed;
-  width: 250px;
+  width: 300px;
   top: 0;
   left: 0;
   overflow: hidden;
