--- a/css/style.css
+++ b/css/style.css
@@ -35,12 +35,10 @@ body {
   left: 10rem;
   transition: all ease-in-out 300ms;
 }
-
 .content.nav-open {
   opacity: 0;
   z-index: -1;
 }
-
 .content #hello {
   font-size: 2.5rem;
   color: #D73C2C;
@@ -51,7 +49,6 @@ body {
   font-weight: 400;
   margin: 0;
 }
-
 .content .text {
   margin-top: 1rem;
 }
@@ -91,9 +88,6 @@ body {
   .nav-menu.nav-open {
     transform: translatex(0);
     border-right: 1px solid rgba(0,0,0,.3);
-  }
-  .dropdown-content {
-    max-width: 250px;
   }
 }
 
